--- a/OutgoingUrls/OutgoingUrls.csproj
+++ b/OutgoingUrls/OutgoingUrls.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper\AlphaHelper.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -271,6 +272,7 @@
     <Content Include="Areas\AdminArea\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\AdminArea\Views\Home\Index.cshtml" />
     <None Include="Project_Readme.html" />
+    <Content Include="Views\Demo\Alpha.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
